--- a/css/table.css
+++ b/css/table.css
@@ -66,7 +66,7 @@
   font-weight: 400;
   letter-spacing: 0.0107em;
   line-height: 1.43;
-  padding: 16px;
+  padding: 4px 16px;
   text-align: center;
   vertical-align: inherit;
 }
