--- a/php_control_page/css/control.css
+++ b/php_control_page/css/control.css
@@ -9,6 +9,14 @@
   width: 100px;
 }
 
+.control_name_td {
+  max-width: 90px;
+}
+
+.control_name_span {
+  word-break: break-all;
+}
+
 .control_setting {
   background: none;
   border-radius: 100px;
