--- a/php_control_page/css/control.css
+++ b/php_control_page/css/control.css
@@ -37,14 +37,24 @@
   margin: 0;
 }
 
+.control_check {
+  z-index: 1400;
+}
+
+.control_check_box {
+  min-width: 250px;
+  min-height: 50px;
+}
+
 .control_form {
   align-items: center;
   display: flex;
   justify-content: center;
-  margin: 30px 0;
+  margin: 20px 0;
 }
 
 .control_text {
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
   margin: 15px;
 }
 
