Add table loading feature

--- a/php_control_page/css/control.css
+++ b/php_control_page/css/control.css
@@ -9,6 +9,12 @@
   width: 100px;
 }
 
+.control_loading {
+  height: 40px !important;
+  margin: 20px;
+  width: 40px !important;
+}
+
 .control_name_td {
   max-width: 90px;
 }
