--- a/php_index_page/css/index.css
+++ b/php_index_page/css/index.css
@@ -20,8 +20,12 @@
   margin: 15px;
 }
 
+.input_group .input_area:valid + .input_field .index_legend {
+  color: #092939;
+}
+
 .index_error {
-  color: red;
+  color: #900;
   display: none;
 }
 
