--- a/css/container.css
+++ b/css/container.css
@@ -1,6 +1,7 @@
 body {
   background: linear-gradient(#c6d5e4, #69737b);
-  padding-bottom: 100px;
+  height: 80vh;
+  overflow: auto;
 }
 
 .container {
@@ -10,7 +11,6 @@ body {
   margin-left: auto;
   margin-right: auto;
   margin-top: 75px;
-  padding-left: 16px;
   padding-right: 16px;
   text-align: center;
   width: 100%;
