--- a/css/input.css
+++ b/css/input.css
@@ -4,7 +4,7 @@
 }
 
 .input_group .input_area {
-  background: #fff;
+  background: rgba(255, 255, 255, 0.05);
   border: 0;
   border-radius: 5px;
   font-size: 18px;
