--- a/css/select.css
+++ b/css/select.css
@@ -1,5 +1,5 @@
 .select_group {
-  border: 1px solid #dadce0;
+  border: 0;
   border-radius: 5px;
   display: inline-block;
   font-family: "Roboto", "Helvetica", "Arial", sans-serif;
@@ -21,13 +21,11 @@
   top: 22px;
   width: 0;
 }
-
 .select_group .select_text {
   appearance: none;
-  /* background-color: transparent; */
   background: linear-gradient(#fff, #bbb);
-  border: none;
-  border-radius: 0;
+  border: 0;
+  border-radius: 5px;
   font-family: inherit;
   font-size: 18px;
   outline: none;
@@ -37,39 +35,47 @@
   -webkit-appearance: none;
 }
 
-.select_group .select_text:focus {
-  border: 2px solid #1979a9;
+.select_group .select_field {
+  border: 1px solid #dadce0;
   border-radius: 5px;
-}
-
-.select_label {
-  color: #8d8d8d;
-  font-size: 18px;
-  font-weight: normal;
-  left: 10px;
+  bottom: 0;
+  height: 43px;
+  left: -3px;
+  padding: 0;
   pointer-events: none;
   position: absolute;
-  top: 10px;
+  width: 100%;
+}
+
+.select_group .select_field .select_legend {
+  color: #8d8d8d;
+  font-size: 17px;
+  font-weight: normal;
+  left: 10px;
+  position: absolute;
+  pointer-events: none;
+  top: 9px;
   transition: 0.2s ease all;
 }
 
-.select_text:valid ~ .select_label,
-.select_text:focus ~ .select_label {
-  background: repeating-linear-gradient(
-    transparent,
-    transparent 20%,
-    #fff 50%,
-    transparent 80%,
-    transparent 100%
-  ) !important;
-  border-radius: 100%;
-  color: #555;
-  font-size: 14px;
-  padding: 10px 3px;
-  top: -20px;
-  transition: 0.2s ease all;
+.select_group .select_text:valid + .select_field {
+  height: 53px;
 }
 
-.select_text:focus ~ .select_label {
+.select_group .select_text:focus + .select_field {
+  border: 2px solid #1979a9;
+  height: 51px;
+}
+
+.select_group .select_text:valid + .select_field .select_legend,
+.select_group .select_text:focus + .select_field .select_legend {
+  font-size: 13px;
+  margin-left: 8px;
+  margin-right: auto;
+  padding: 0 5px;
+  position: initial;
+}
+
+.select_group .select_text:focus + .select_field .select_legend {
   color: #1979a9;
 }
