--- a/css/input.css
+++ b/css/input.css
@@ -32,16 +32,19 @@
   transition: 0.1s;
 }
 
-.input_group .input_area:focus + .input_field {
-  height: 42px;
+.input_group .input_area:valid + .input_field,
+.input_group .input_area:-webkit-autofill + .input_field {
+  height: 44px;
 }
 
 .input_group .input_area:focus + .input_field {
   border: 2px solid #1979a9;
+  height: 42px;
 }
 
 .input_group .input_area:valid + .input_field .input_legend,
-.input_group .input_area:focus + .input_field .input_legend {
+.input_group .input_area:focus + .input_field .input_legend,
+.input_group .input_area:-webkit-autofill + .input_field .input_legend {
   font-size: 13px;
   margin-right: auto;
   padding: 0 5px;
@@ -50,11 +53,6 @@
 
 .input_group .input_area:focus + .input_field .input_legend {
   color: #1979a9;
-}
-
-.input_group .input_area:valid + .input_field,
-.input_group .input_area:-webkit-autofill + .input_field {
-  height: 44px;
 }
 
 .input_group .input_helper {
