--- a/css/select.css
+++ b/css/select.css
@@ -27,7 +27,7 @@
   border: 0;
   border-radius: 5px;
   font-family: inherit;
-  font-size: 18px;
+  font-size: 17px;
   outline: none;
   padding: 12px 15px;
   position: relative;
@@ -59,16 +59,17 @@
 }
 
 .select_group .select_text:valid + .select_field {
-  height: 53px;
+  height: 52px;
 }
 
 .select_group .select_text:focus + .select_field {
   border: 2px solid #1979a9;
-  height: 51px;
+  height: 50px;
 }
 
 .select_group .select_text:valid + .select_field .select_legend,
 .select_group .select_text:focus + .select_field .select_legend {
+  color: #666;
   font-size: 13px;
   margin-left: 8px;
   margin-right: auto;
