--- a/css/table.css
+++ b/css/table.css
@@ -1,72 +1,31 @@
-.table_group {
-  background-color: #fff;
-  border-radius: 4px;
-  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
-    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-  color: rgba(0, 0, 0, 0.87);
-  overflow-x: auto;
-  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-  width: 100%;
+.bootstrap-table {
+  margin-bottom: 50px;
 }
 
-.table_root {
-  border-collapse: collapse;
-  border-spacing: 0;
-  display: table;
-  width: 100%;
+.table_group tbody {
+  background-color: white;
 }
 
-.table_head {
-  display: table-header-group;
-}
-
-.table_head_tr {
-  color: inherit;
-  display: table-row;
-  outline: 0;
-  vertical-align: middle;
-}
-
-.table_head_th {
+.table_group thead tr {
   background-color: #a4d000;
-  border: 1px solid rgba(224, 224, 224, 1);
-  color: #000;
-  display: table-cell;
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
-  font-size: 16px;
-  font-weight: 500;
-  letter-spacing: 0.0107em;
-  line-height: 1.5rem;
-  padding: 8px 4px;
-  text-align: center;
-  vertical-align: inherit;
 }
 
-.table_body {
-  display: table-row-group;
-}
-
-.table_body_tr {
-  color: inherit;
-  display: table-row;
-  outline: 0;
-  vertical-align: middle;
-}
-
-.table_body_tr:nth-child(odd) {
+.table_group tbody tr:nth-child(odd) {
   background-color: rgba(0, 0, 0, 0.04);
 }
 
-.table_body_td {
-  border: 1px solid rgba(224, 224, 224, 1);
-  color: rgba(0, 0, 0, 0.87);
-  display: table-cell;
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
-  font-size: 16px;
-  font-weight: 400;
-  letter-spacing: 0.0107em;
-  line-height: 1.43;
-  padding: 8px 4px;
-  text-align: center;
-  vertical-align: inherit;
+.glyphicon-export:before {
+  content: "\f019";
+}
+
+input + .export {
+  display: none;
+}
+
+.export li {
+  padding: 2px 10px;
+}
+
+.export li:hover {
+  background-color: rgba(0, 0, 0, 0.04);
 }
