--- a/css/button.css
+++ b/css/button.css
@@ -1,11 +1,11 @@
-.button_group {
+button {
   align-items: center;
   background: linear-gradient(#eee, #bbb);
   border: 2px solid transparent;
   border-radius: 4px;
   box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2),
     0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
-  color: #000;
+  color: #000 !important;
   display: inline-flex;
   font-family: "Roboto", "Helvetica", "Arial", sans-serif;
   font-size: 16px;
@@ -13,7 +13,7 @@
   justify-content: center;
   letter-spacing: 0.03em;
   line-height: 1.75;
-  margin: 0 5px;
+  margin: 0 5px !important;
   min-width: 48px;
   padding: 4px 12px;
   position: relative;
@@ -22,18 +22,18 @@
   vertical-align: middle;
 }
 
-.button_group:hover,
-.button_group:focus {
+button:hover,
+button:focus {
   outline: 0;
   text-decoration: none;
 }
 
-.button_group:focus {
+button:focus {
   border: 2px solid #1979a9;
   border-radius: 4px;
 }
 
-.button_group:not(:disabled) {
+button:not(:disabled) {
   cursor: pointer;
 }
 
