--- a/css/button.css
+++ b/css/button.css
@@ -15,6 +15,7 @@ button {
   line-height: 1.75;
   margin: 0 5px !important;
   min-width: 48px;
+  outline: none !important;
   padding: 4px 12px;
   position: relative;
   text-transform: uppercase;
