--- a/css/table.css
+++ b/css/table.css
@@ -1,7 +1,3 @@
-.bootstrap-table {
-  margin-bottom: 50px;
-}
-
 .table_group tbody {
   background-color: white;
 }
@@ -28,4 +24,11 @@ input + .export {
 
 .export li:hover {
   background-color: rgba(0, 0, 0, 0.04);
+}
+
+.fixed-table-pagination {
+  background: rgba(255, 255, 255, 0.9);
+  margin: 10px 0;
+  border-radius: 10px;
+  padding: 0 16px;
 }
