--- a/php_control_page/css/control.css
+++ b/php_control_page/css/control.css
@@ -69,7 +69,7 @@
   background: rgba(255, 255, 255, 0.9);
   margin: 10px 0 50px;
   border-radius: 10px;
-  padding: 0 16px;
+  padding: 8px 16px 1px;
 }
 
 p {
